@@ -1,3 +1,10 @@
+2008-11-18  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gsl_chebyshev.h: added auxiliary functions
+
+	* init.c (gsl_cheb_order, gsl_cheb_size, gsl_cheb_coeffs): added
+	auxiliary functions
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir
