@@ -1,3 +1,6 @@
+** Added new auxiliary functions gsl_cheb_order, gsl_cheb_size,
+   gsl_cheb_coeffs for Chebyshev series [bug #21830]
+
 ** Updated license of the reference manual to GNU FDL version 1.3.
 
 ** Fixed a bug where the gsl_isinf function would return +1 for -Inf
